--- a/k8s/nginx/ingress.yaml
+++ b/k8s/nginx/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: rails-ing
 spec:
   rules:
-  - host: testing.saple-docker.jp
+  - host: development.barth.jp
     http:
       paths:
       - path: /
