--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,10 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               apt-get install -qq -y gettext
-              #echo $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
-              echo ${HOME}
+
+              $echo $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
+              echo "foobar" | base64 --wrap=0
+
               gcloud auth activate-service-account --key-file ${HOME}/account-auth.json
               gcloud config set project $PROJECT_NAME
               gcloud --quiet config set container/cluster $CLUSTER_NAME
