--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,9 +64,8 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               apt-get install -qq -y gettext
-
-              echo $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
-
+              # echo $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
+              echo -n $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
               gcloud auth activate-service-account --key-file ${HOME}/account-auth.json
               gcloud config set project $PROJECT_NAME
               gcloud --quiet config set container/cluster $CLUSTER_NAME
