--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,8 +77,8 @@ jobs:
               # kubectl create secret generic cloudsql-instance-credentials --from-file=credentials.json=${HOME}/account-auth.json
               envsubst < ${MANIFESTS_DIR}/web.yaml > ${MANIFESTS_DIR}/patched_web.yaml
               #envsubst < ${MANIFESTS_DIR}/job.yaml > ${MANIFESTS_DIR}/patched_job.yaml
-              chmod +x ${MANIFESTS_DIR}/deploy.sh
-              ${MANIFESTS_DIR}/deploy.sh
+              #chmod +x ${MANIFESTS_DIR}/deploy.sh
+              #${MANIFESTS_DIR}/deploy.sh
               kubectl apply -f ${MANIFESTS_DIR}/patched_web.yaml --record
               #kubectl apply -f ${MANIFESTS_DIR}/patched_job.yaml --record
             fi
