--- a/k8s/nginx/ingress.yaml
+++ b/k8s/nginx/ingress.yaml
@@ -1,14 +1,23 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  namespace: sample
-  name: rails-ing
+  name: ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    # kubernetes.io/ingress.class: "nginx"
+    # kubernetes.io/tls-acme: 'true'
+    # certmanager.k8s.io/issuer: "letsencrypt-staging"
+    # certmanager.k8s.io/acme-challenge-type: http01
 spec:
   rules:
   - host: development.barth.jp
     http:
       paths:
-      - path: /
+      - path: /*
         backend:
-          serviceName: rails
+          serviceName: webserver-service
           servicePort: 3000
+  # tls:
+  #   - hosts:
+  #       - "ssl-testing.work"
+  #     secretName: letsencrypt-staging
