--- a/k8s/nginx/ingress.yaml
+++ b/k8s/nginx/ingress.yaml
@@ -1,23 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    # kubernetes.io/ingress.class: "nginx"
-    # kubernetes.io/tls-acme: 'true'
-    # certmanager.k8s.io/issuer: "letsencrypt-staging"
-    # certmanager.k8s.io/acme-challenge-type: http01
+  namespace: sample
+  name: rails-ing
 spec:
   rules:
   - host: development.barth.jp
     http:
       paths:
-      - path: /*
+      - path: /
         backend:
-          serviceName: webserver-service
+          serviceName: rails
           servicePort: 3000
-  # tls:
-  #   - hosts:
-  #       - "ssl-testing.work"
-  #     secretName: letsencrypt-staging
