--- a/k8s/cloudsql/secret.yaml
+++ b/k8s/cloudsql/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cloudsql-password
 type: Opaque
 data:
-  username: c2FtcGxlX2drZQo=
+  username: sample_gke
   password: UHI1U0ZYRDhuRWVDOVgyCg==
   rootpass: bU5BbGlsdms1cEhJT0FNaAo=
   
