--- a/config/database.yml
+++ b/config/database.yml
@@ -2,24 +2,19 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # host: db
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
+  host: <%= ENV.fetch("DB_HOST") { '192.168.33.1' }  %>
 
 development:
   <<: *default
   database: sample_docker_development
-  username: root
-  password: <%= ENV.fetch('MYSQL_ROOT_PASSWORD') { 'password' } %>
-  # socket: /var/lib/mysql/mysql.sock
-  #host: <%= ENV['MYSQL_HOST'] %>
-  #host: <%= ENV.fetch("DB_HOST") { 'localhost' }  %>
-  host: <%= ENV['DB_HOST'] %>
+
 
 test:
   <<: *default
   database: sample_docker_test
-  username: root
-  password: <%= ENV.fetch('MYSQL_ROOT_PASSWORD') { 'password' } %>
-  # socket: /var/lib/mysql/mysql.sock
-  #host: <%= ENV['MYSQL_HOST'] %>
-  #host: <%= ENV.fetch("DB_HOST") { 'localhost' }  %>
-  host: <%= ENV['DB_HOST'] %>
+
+production:
+  <<: *default
+  database: sample_docker_production
