--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,11 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  #username: <%= ENV['MYSQL_USER'] %>
+  #password: <%= ENV['MYSQL_PASSWORD'] %>
   username: <%= ENV['MYSQL_USER'] %>
   password: <%= ENV['MYSQL_PASSWORD'] %>
-  host: <%= ENV.fetch("DB_HOST") { '192.168.33.1' }  %>
+  host: <%= ENV.fetch("DB_HOST") { '192.168.33.10' }  %>
 
 development:
   <<: *default
