--- a/environments/db.env
+++ b/environments/db.env
@@ -1,4 +1,6 @@
 MYSQL_ROOT_PASSWORD=root
-MYSQL_USER=barth_user
-MYSQL_PASSWORD=two0401
-
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+#MYSQL_USER=barth_user
+#MYSQL_PASSWORD=two0401
+DB_HOST=mysql
