--- a/k8s/sleepdays/secret.yaml
+++ b/k8s/sleepdays/secret.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 data:
-  password: PMd8XOr0igAlO5t/DrEdWvOzURbSc/AvEX3pReQ6IPJVOkbkmKheJsITWY/kmLrg.gvKNSVe0f7fNGh95.m5uXBf4gd8Q9Lqr2zGQTMQ==
-  rootpass: hGiHLwrqTTRlvaR9/6QrVyWR/O2l3kIBsoBoG6zwRrHddn7fpt+E/CJJEn1mcIDc.wpb+GZCimXeerT84.SWlvQRYfAH6toJPCaJHE3Q==
-  secret_key_base: K4VZyr+arF2Uj5jsZF7H64HE3zzUf4bE7n5yIO7rXRyDJtqZh0AAPj+Uailw8oi3.fc6067rAXT5KPxZY.s1aPdx6PeHe2R+hsYmBy8w==
-  username: tZVcc4/9b1IS/qstBi9EZXTw6+9KKyI6oyTjohrhABmbFmmzY3Qpx5Gz/p30OYpM.17xugb0uXC6juuMR.B/P5cIOo8w//imZEsBsE2Q==
+  password: CoWxa7cDQx5yDisN848VOzaznOGdVLnL6XQ61mkpwL3Ain6IK6OW+m5Zlc4OeoPr.SZy0KxuxThxuT9/l.ndxcfjT+xn7jVUYI15IPVg==
+  rootname: LaG0998ZJP4T/zuY+rc7lAPaN5Uz1FYSvrc17EJglHASNrjVc2srjon5Z9+WBPpZ.Y88VQihCneSNJqxN.FayP78hEtNEPOuUXqgPl2Q==
+  rootpass: m5ncWYng6it39rU37dFLzIaLQ2GlfMFb4vMIERc9MGfEyuzhDPY2g56oFBz6qCRU.F+vSTPzPmyTNMhW1.+AmUuwmYzEdla0Yl6vZZtQ==
+  secret_key_base: CSy5zLXvkS3pUCrUXjoNaulN/6fScRpvq1bPUfS04xII74fQyx9VrjzgxgWFM50b.usoccIZqowzZfjGj.lKzgUngYRGgclHfy/neI8w==
+  username: zRvWdTo1ftFxLT8wFuv2Am+CLpDaIgef0x2dMlA9C7cXHPwnTZ6pJKEAXsXss6dV.tuHPCQ6qXqPUP10w.A57DUZkPPKN+tl8RsgC+Qw==
 kind: Secret
 metadata:
   name: secret
 type: Opaque
 # kubesec:v:3
-# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K1iJmex8W2m2bQnX27C/xonZe8zXESb0Xa4Llxy+6vESSQBkiOELTbdKuzJVjUehu1Rw4tue99LbNwyrNHEucvYN1T2mCW0evaq7K20OrHipmMx5Cy/SwzgJe6pQ+ptLjMfqj9GIBi604KY=
-# kubesec:mac:qkmmRF+ZqEx41bKa.BtuCYG9507ExG3vqWQAqgg==
+# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K70zBFVeDnQslVujBi89vEsjd9UyE9OLAEHB1JtwzxESSQBkiOELTuSz43QCnKFZf/5POdnzio8hoU28eSkDV8R7BoorkMFchmd9TV/JzQWLIZASRdBSf73DiGB8WBN++6YhFagDzzW4Euo=
+# kubesec:mac:lmrJU7s3iekcZKZj.CR5hmhmT6qLcFZaajI3hyw==
