--- a/k8s/sleepdays/job.yaml
+++ b/k8s/sleepdays/job.yaml
@@ -79,8 +79,8 @@ spec:
             - name: DB_HOST
               value: 127.0.0.1
             - name: RAILS_ENV
-              value: production
-            - name: SECRET_KEY_BASE
+              value: development
+            - name: RAILS_MASTER_KEY
               valueFrom:
                 secretKeyRef:
                   name: secret
