--- a/k8s/sleepdays/web.yaml
+++ b/k8s/sleepdays/web.yaml
@@ -121,7 +121,7 @@ spec:
             # - name: RAILS_ENV
             #   value: development
             - name: RAILS_ENV
-              value: production
+              value: development
             - name: DB_HOST
               value: 127.0.0.1
             #- name: SECRET_KEY_BASE
