--- a/k8s/sleepdays/secret.yaml
+++ b/k8s/sleepdays/secret.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 data:
-  password: CoWxa7cDQx5yDisN848VOzaznOGdVLnL6XQ61mkpwL3Ain6IK6OW+m5Zlc4OeoPr.SZy0KxuxThxuT9/l.ndxcfjT+xn7jVUYI15IPVg==
-  rootname: LaG0998ZJP4T/zuY+rc7lAPaN5Uz1FYSvrc17EJglHASNrjVc2srjon5Z9+WBPpZ.Y88VQihCneSNJqxN.FayP78hEtNEPOuUXqgPl2Q==
-  rootpass: m5ncWYng6it39rU37dFLzIaLQ2GlfMFb4vMIERc9MGfEyuzhDPY2g56oFBz6qCRU.F+vSTPzPmyTNMhW1.+AmUuwmYzEdla0Yl6vZZtQ==
-  secret_key_base: CSy5zLXvkS3pUCrUXjoNaulN/6fScRpvq1bPUfS04xII74fQyx9VrjzgxgWFM50b.usoccIZqowzZfjGj.lKzgUngYRGgclHfy/neI8w==
-  username: zRvWdTo1ftFxLT8wFuv2Am+CLpDaIgef0x2dMlA9C7cXHPwnTZ6pJKEAXsXss6dV.tuHPCQ6qXqPUP10w.A57DUZkPPKN+tl8RsgC+Qw==
+  password: 3DKF5h3rvUfKPTCC8gtF1KWQhF4eFOaAaxC++LDOR+0msdMZUOeBelk6I3uA5Me+.CAvQX9wYLYUfunRi.9rzuwwDykVM4DoeXtjpTTQ==
+  rootname: sIr+sL0CrclQYq1/oWMvA2rtFDkg6ceTkOG5m8CcXjrm+fWGDJ4PG6Hqm6CNaxk1.hHAZaYmOaFbLIj8b.Daj1VIbFg97svPNKEqSJWA==
+  rootpass: yB9dsgzO+ueHgcblyeWtQ4qt2Z7m+WIVKUpvNX1ZeFCyVW/TMdLgnedR/1meFCDq.M1688NQKIBrmUKDX.RvecckeYaNKm+Hbw/QPktg==
+  secret_key_base: v7ccW8kPeTflojOwlGd2R5fuQb3wDU0jA+7WKPFqXBmcU0vTIead6fRFIvDHxEtD.5A20iYckzo5kBI81.T+UM0ncRzGw0QMtFRO8ieQ==
+  username: 7EzGD3LNRcsuMRXIrzaWJtFKQ3+k+wwuzGVRpuA9k4mDWI7bcvMViUmkRZlNgYgq.I4cClUPd2jwP0yct.annWNcmYZ4i5qcMJidOcvw==
 kind: Secret
 metadata:
   name: secret
 type: Opaque
 # kubesec:v:3
-# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K70zBFVeDnQslVujBi89vEsjd9UyE9OLAEHB1JtwzxESSQBkiOELTuSz43QCnKFZf/5POdnzio8hoU28eSkDV8R7BoorkMFchmd9TV/JzQWLIZASRdBSf73DiGB8WBN++6YhFagDzzW4Euo=
-# kubesec:mac:lmrJU7s3iekcZKZj.CR5hmhmT6qLcFZaajI3hyw==
+# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K3ayZRZZkTwYuOK2ppL0WNgg6Dvj6lDgTuVzKeBwMscSSQBkiOELFiSfdWB0u8hiC0PKd0negtxh/XkH49Puk4AboAr6q5oqlOe5rImIzh8+XFg23Iqa1SN/45gKO/niv+N0T8eBE8DqvwY=
+# kubesec:mac:HltBEbWyPFqFf58g.6B8w9HCtuw1mydW5TrNX4A==
