--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,6 @@ jobs:
               echo 4
               kubectl apply -f ${MANIFESTS_DIR}/patched_web.yaml --record
               echo 5
-              kubectl apply -f ${MANIFESTS_DIR}/patched_job.yaml --record
+              #kubectl apply -f ${MANIFESTS_DIR}/patched_job.yaml --record
               echo 6
             fi
