--- a/k8s/sleepdays/job.yaml
+++ b/k8s/sleepdays/job.yaml
@@ -18,6 +18,7 @@ spec:
         - name: cloudsql-instance-credentials
           secret:
             secretName: cloudsql-instance-credentials
+            #secretName: secret
         - name: ssl-certs
           hostPath:
             path: /etc/ssl/certs
@@ -31,15 +32,9 @@ spec:
       containers:
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:1.11
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              echo "start connect cloud proxy"
-              /cloud_sql_proxy -instances=$(SQL_INSTANCE_NAME)=tcp:3306 -credential_file=/secrets/cloudsql/credentials.json &
-              while true; do
-                if [[ -f "/tmp/pod/terminated" ]]; then kill $!; echo "Killed $! because the main container terminated. And Job completed. Exiting..."; exit 0; fi;
-                sleep 1;
-              done
+          command: ["/cloud_sql_proxy",
+                    "-instances=$(SQL_INSTANCE_NAME)=tcp:3306",
+                    "-credential_file=/secrets/cloudsql/credentials.json"]
           securityContext:
             runAsUser: 2  # non-root user
             allowPrivilegeEscalation: false
@@ -48,7 +43,7 @@ spec:
               cpu: 5m
           env:
             - name: SQL_INSTANCE_NAME
-              value: ${SQL_INSTANCE_NAME} 
+              value: ${SQL_INSTANCE_NAME}
           volumeMounts:
             - name: cloudsql-instance-credentials
               mountPath: /secrets/cloudsql
@@ -58,7 +53,7 @@ spec:
             - name: cloudsql
               mountPath: /cloudsql
             - name: tmp-pod
-              mountPath: /tmp/pod  
+              mountPath: /tmp/pod
               readOnly: true
 
         - name: setup
