--- a/k8s/sleepdays/web.yaml
+++ b/k8s/sleepdays/web.yaml
@@ -95,7 +95,8 @@ spec:
           volumeMounts:
             - mountPath: /sockets
               name: sockets
-
+            - mountPath: /public
+              name: public
         - name: rails
           image: asia.gcr.io/${PROJECT_NAME}/${CLOUD_REGISTRY_NAME}/app:$CIRCLE_SHA1
           imagePullPolicy: IfNotPresent
