--- a/containers/nginx/rails_puma/nginx.conf
+++ b/containers/nginx/rails_puma/nginx.conf
@@ -1,15 +1,12 @@
-# プロキシ先の指定
-# Nginxが受け取ったリクエストをバックエンドのpumaに送信
 upstream sample_docker {
   # ソケット通信したいのでpuma.sockを指定
   #server unix:///sample_docker/tmp/sockets/puma.sock;
-  server unix:///sockets/puma.sock;
+  server unix:///sockets/tmp/puma.sock;
 }
 
 server {
   listen 8080;
-  # ドメインもしくはIPを指定
-  server_name development.barth.jp;
+  server_name ssl-sleepdays.com;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
