--- a/containers/nginx/rails_puma/nginx.conf
+++ b/containers/nginx/rails_puma/nginx.conf
@@ -1,7 +1,5 @@
-upstream sample_docker {
-  # ソケット通信したいのでpuma.sockを指定
-  #server unix:///sample_docker/tmp/sockets/puma.sock;
-  server unix:///tmp/sockets/puma.sock;
+upstream webapp {
+  server unix:///sample_docker/tmp/sockets/puma.sock;
 }
 
 server {
