--- a/containers/nginx/rails_puma/nginx.conf
+++ b/containers/nginx/rails_puma/nginx.conf
@@ -4,22 +4,24 @@ upstream webapp {
 
 server {
   listen 8080;
-  server_name ssl-sleepdays.com;
+  server_name localhost;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
-  # ドキュメントルートの指定
-  root /sample_docker/public;
+  root /webapp/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @sample_docker;
+  try_files  $uri/index.html $uri @webapp;
   keepalive_timeout 5;
 
-  # リバースプロキシ関連の設定
-  location @sample_docker {
+  if ($http_x_forwarded_proto = 'http') {
+      return 301 https://$host$request_uri;
+  }
+  
+  location @webapp {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
