--- a/containers/nginx/rails_puma/nginx.conf
+++ b/containers/nginx/rails_puma/nginx.conf
@@ -1,4 +1,4 @@
-upstream webapp {
+upstream sample_docker {
   server unix:///sample_docker/tmp/sockets/puma.sock;
 }
 
@@ -9,12 +9,12 @@ server {
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
-  root /webapp/public;
+  root /sample_docker/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @webapp;
+  try_files  $uri/index.html $uri @sample_docker;
   keepalive_timeout 5;
 
   if ($http_x_forwarded_proto = 'http') {
