--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - .:/sample_docker
       - public-data:/sample_docker/public
-      - sockets-data:/sockets
-      - pids-data:/sample_docker/pids
+      - sockets-data:/sample_docker/tmp/sockets
+      - pids-data:/sample_docker/tmp/pids
       - tmp-data:/sample_docker/tmp
       - log-data:/sample_docker/log
     depends_on:
@@ -23,11 +23,11 @@ services:
       - db-data:/var/lib/mysql
   web:
     build:
-      context: containers/nginx
+      context: containers/nginx/rails_puma
     volumes:
       - public-data:/sample_docker/public
-      - sockets-data:/sockets
-      - pids-data:/sample_docker/pids
+      - sockets-data:/sample_docker/tmp/sockets
+      - pids-data:/sample_docker/tmp/pids
       - tmp-data:/sample_docker/tmp
     ports:
       - 80:8080
