--- a/k8s/sleepdays/web.yaml
+++ b/k8s/sleepdays/web.yaml
@@ -8,7 +8,7 @@ spec:
     server: web
   #type: ClusterIP
   type: NodePort
-
+deployment
   ports:
   - port: 3000
     targetPort: 8080
@@ -67,7 +67,7 @@ spec:
 
       containers:
         - name: cloudsql-proxy
-          image: gcr.io/cloudsql-docker/gce-proxy:1.11
+          image: gcr.io/cloudsql-docker/gce-proxy:1.14
           command: ["/cloud_sql_proxy",
                     "-instances=$(SQL_INSTANCE_NAME)=tcp:3306",
                     "-credential_file=/secrets/cloudsql/credentials.json"]
