--- a/k8s/sleepdays/web.yaml
+++ b/k8s/sleepdays/web.yaml
@@ -8,7 +8,11 @@ spec:
     server: web
   #type: ClusterIP
   type: NodePort
-deployment
+
+  ports:
+  - port: 3000
+    targetPort: 8080
+    nodePort: 30000
   ports:
   - port: 3000
     targetPort: 8080
