--- a/k8s/sleepdays/ingress.yaml
+++ b/k8s/sleepdays/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   tls:
   - secretName: cert-manager-tls
   rules:
-  - host: ssl-sleepdays.com
+  - host: development.ssl-sleepdays.com
     http:
       paths:
       - path: /*
