--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               apt-get install -qq -y gettext
               echo -n $ACCT_AUTH | base64 --decode > ${HOME}/account-auth.json
+
               gcloud auth activate-service-account --key-file ${HOME}/account-auth.json
               gcloud config set project $PROJECT_NAME
               gcloud --quiet config set container/cluster $CLUSTER_NAME
@@ -77,12 +78,12 @@ jobs:
               gcloud config set container/use_client_certificate True
               gcloud docker -- push asia.gcr.io/${PROJECT_NAME}/${CLOUD_REGISTRY_NAME}/web:$CIRCLE_SHA1
               gcloud docker -- push asia.gcr.io/${PROJECT_NAME}/${CLOUD_REGISTRY_NAME}/app:$CIRCLE_SHA1
-              #envsubst < ${MANIFESTS_DIR}/ingress.yaml > ${MANIFESTS_DIR}/patched_ingress.yaml
+              envsubst < ${MANIFESTS_DIR}/ingress.yaml > ${MANIFESTS_DIR}/patched_ingress.yaml
               envsubst < ${MANIFESTS_DIR}/web.yaml > ${MANIFESTS_DIR}/patched_web.yaml
               envsubst < ${MANIFESTS_DIR}/job.yaml > ${MANIFESTS_DIR}/patched_job.yaml
               chmod +x ${MANIFESTS_DIR}/deploy.sh
               ${MANIFESTS_DIR}/deploy.sh
-              #kubectl apply -f ${MANIFESTS_DIR}/patched_ingress.yaml --record
+              kubectl apply -f ${MANIFESTS_DIR}/patched_ingress.yaml --record
               kubectl apply -f ${MANIFESTS_DIR}/patched_web.yaml --record
               kubectl apply -f ${MANIFESTS_DIR}/patched_job.yaml --record
             fi
