--- a/k8s/sleepdays/secret.yaml
+++ b/k8s/sleepdays/secret.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 data:
-  password: 3DKF5h3rvUfKPTCC8gtF1KWQhF4eFOaAaxC++LDOR+0msdMZUOeBelk6I3uA5Me+.CAvQX9wYLYUfunRi.9rzuwwDykVM4DoeXtjpTTQ==
-  rootname: sIr+sL0CrclQYq1/oWMvA2rtFDkg6ceTkOG5m8CcXjrm+fWGDJ4PG6Hqm6CNaxk1.hHAZaYmOaFbLIj8b.Daj1VIbFg97svPNKEqSJWA==
-  rootpass: yB9dsgzO+ueHgcblyeWtQ4qt2Z7m+WIVKUpvNX1ZeFCyVW/TMdLgnedR/1meFCDq.M1688NQKIBrmUKDX.RvecckeYaNKm+Hbw/QPktg==
-  secret_key_base: v7ccW8kPeTflojOwlGd2R5fuQb3wDU0jA+7WKPFqXBmcU0vTIead6fRFIvDHxEtD.5A20iYckzo5kBI81.T+UM0ncRzGw0QMtFRO8ieQ==
-  username: 7EzGD3LNRcsuMRXIrzaWJtFKQ3+k+wwuzGVRpuA9k4mDWI7bcvMViUmkRZlNgYgq.I4cClUPd2jwP0yct.annWNcmYZ4i5qcMJidOcvw==
+  password: a/XzOTT2fNdvnJXypTZdZ8DnzPRLsZZePX2y9AG1Bl9g5gfjACz+6mu+Hfk3Mn9c.WtlgzjeBIpLzADLW.Oi2HooAjD2nHh6paTtuPyQ==
+  rootname: B2Q2vPEeqZug50RQGGBaVfae47ZDC/GoeWFD9U8SVBn/aIrdg8HNASyfn8jKFEYS.u6M9xwUwlGx+SACZ.epAxp4Oby8zCUeaPqzi3Kg==
+  rootpass: iIDL26Lv85IIqOfp6WCbGqWu1YXNyizAA/veGvWzHNHTnu4mRlDf2aMOVS28fzfX.P8B8Fx+i2q2fswDA.ijTZMjlJ3NTuZ0DgBt+N9Q==
+  secret_key_base: hyCH8ne9+tl86Lrb45hJ/Ll/xe2JjcfJR3XXPi+IsHPeO6I3Yn4Odff1r+0rEM+X.rah7KiRiodAc4Z4Y.bdKy8MCM2zcof1HevxwNLA==
+  username: nObKeT4XpQ8iMiur0GToi/dB3a3KFXgOuQMKxDExcljt0gdmx+SSFCMFLFUCVP4j.IIRSHM82zuYIzaHV.yk0yUxAJ/sLHlGRS4hkDsQ==
 kind: Secret
 metadata:
   name: secret
 type: Opaque
 # kubesec:v:3
-# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K3ayZRZZkTwYuOK2ppL0WNgg6Dvj6lDgTuVzKeBwMscSSQBkiOELFiSfdWB0u8hiC0PKd0negtxh/XkH49Puk4AboAr6q5oqlOe5rImIzh8+XFg23Iqa1SN/45gKO/niv+N0T8eBE8DqvwY=
-# kubesec:mac:HltBEbWyPFqFf58g.6B8w9HCtuw1mydW5TrNX4A==
+# kubesec:gcp:projects/testing-20190417/locations/global/keyRings/two/cryptoKeys/sleepdays:CiQAg263K73rfTQjDr1ny2S+GF3UrSlrkE3NLWS9pC1e1eBJXncSSQBkiOELLnGNwWdZJ4p35sMZXyWw7yCL3l8AhS2NJXQYO4FyqMkg6WPS7J94kNu2lBnXcAwCBXvKgDllUIXJ1Op8vPR00aLV8X4=
+# kubesec:mac:hDsrX11JjhQOy44a.uxz6/jGTAHU5V2/3wZSARA==
