--- a/k8s/sleepdays/ingress.yaml
+++ b/k8s/sleepdays/ingress.yaml
@@ -1,15 +1,15 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: rails-ing
+  name: rails-development-ing
   annotations:
-    kubernetes.io/ingress.global-static-ip-name: https-demo-ip
-    ingress.gcp.kubernetes.io/pre-shared-cert: https-demo-cert
+    kubernetes.io/ingress.global-static-ip-name: https-development-ip
+    ingress.gcp.kubernetes.io/pre-shared-cert: https-development-cert
 spec:
   tls:
   - secretName: cert-manager-tls
   rules:
-  - host: development.ssl-sleepdays.com
+  - host: development-ssl-sleepdays.com
     http:
       paths:
       - path: /*
