--- a/k8s/sleepdays/web.yaml
+++ b/k8s/sleepdays/web.yaml
@@ -89,6 +89,10 @@ spec:
               mountPath: /etc/ssl/certs
             - name: cloudsql
               mountPath: /cloudsql
+          lifecycle:
+            preStop:
+              exec:
+                command: ["sh", "-c", "sleep 10"]
 
         - name: nginx
           # イメージの指定
@@ -103,6 +107,24 @@ spec:
               name: sockets
             - mountPath: /public
               name: public
+          resources:
+            requests:
+              cpu: 100m
+          resources:
+            limits:
+              cpu: 100m
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 5
+            successThreshold: 1
+        lifecycle:
+          preStop:
+            exec:
+              command: ["sh", "-c", "sleep 5; /usr/sbin/nginx -s quit"]
+              
         - name: rails
           image: asia.gcr.io/${PROJECT_NAME}/${CLOUD_REGISTRY_NAME}/app:$CIRCLE_SHA1
           imagePullPolicy: IfNotPresent
@@ -122,7 +144,7 @@ spec:
           lifecycle:
             preStop:
               exec:
-                command: ["/bin/sh", "-c", "sleep 25; kill -QUIT `(cat tmp/pids/puma.pid)`"]
+                command: ["/bin/sh", "-c", "sleep 5; kill -QUIT `(cat tmp/pids/puma.pid)`"]
           env:
             - name: TZ
               value: Asia/Tokyo
